--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -156,6 +156,9 @@
   <data name="Menu_DeletePage" xml:space="preserve">
     <value>Delete page</value>
   </data>
+  <data name="Menu_RotatePage" xml:space="preserve">
+    <value>Rotate page</value>
+  </data>
   <data name="Menu_AddText" xml:space="preserve">
     <value>Add text</value>
   </data>
@@ -503,6 +506,9 @@ Click again to remove marks.</value>
   </data>
   <data name="UI_Filter_Deletions" xml:space="preserve">
     <value>Marked for deletion</value>
+  </data>
+  <data name="UI_Filter_Rotations" xml:space="preserve">
+    <value>Rotations</value>
   </data>
   <data name="Msg_HelpNotFound" xml:space="preserve">
     <value>Help PDF was not found in the application folder.</value>
