feat(annotations): add label rotation in text editor and export   - add 0/90/180/270 rotation options in the text dialog   - store per-label rotation and adjust bounds   - apply rotation in preview and PDF rendering

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -540,6 +540,9 @@ Ponowne kliknięcie usunie zaznaczenia.</value>
   <data name="EditText_GroupAlignment" xml:space="preserve">
     <value>Wyrównanie</value>
   </data>
+  <data name="EditText_GroupRotation" xml:space="preserve">
+    <value>Obrót</value>
+  </data>
   <data name="EditText_AlignLeft" xml:space="preserve">
     <value>Lewo</value>
   </data>
