--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -540,6 +540,9 @@ Click again to remove marks.</value>
   <data name="EditText_GroupAlignment" xml:space="preserve">
     <value>Alignment</value>
   </data>
+  <data name="EditText_GroupRotation" xml:space="preserve">
+    <value>Rotation</value>
+  </data>
   <data name="EditText_AlignLeft" xml:space="preserve">
     <value>Left</value>
   </data>
