feat(annotations): add symbol palette and live preview   - auto-apply text edits in dialog and keep focus for typing   - add symbol gallery (line, degree, superscripts, paragraph, etc.)   - export Unicode symbols in PDF with font fallback

--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -543,6 +543,9 @@ Click again to remove marks.</value>
   <data name="EditText_GroupRotation" xml:space="preserve">
     <value>Rotation</value>
   </data>
+  <data name="EditText_GroupSymbols" xml:space="preserve">
+    <value>Symbols</value>
+  </data>
   <data name="EditText_AlignLeft" xml:space="preserve">
     <value>Left</value>
   </data>
