feat(annotations): add angle presets and duplicate button   - allow arbitrary rotation with presets (0/30/45/90/180/270)   - add duplicate action in annotation toolbar   - keep preview/PDF layout consistent for custom angles

--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -549,6 +549,9 @@ Click again to remove marks.</value>
   <data name="EditText_GroupRotation" xml:space="preserve">
     <value>Rotation</value>
   </data>
+  <data name="EditText_RotationLabel" xml:space="preserve">
+    <value>Angle (deg):</value>
+  </data>
   <data name="EditText_GroupSymbols" xml:space="preserve">
     <value>Symbols</value>
   </data>
