fix(rotation): handle base rotation in redaction output   - track reencoded pages and avoid double-applying base rotation   - adjust coordinate conversion for baked rotations in redaction + text   - open diagnostic log after save when enabled   - make diagnostic mode session-only (no user settings persistence)

--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -198,6 +198,9 @@
   <data name="Menu_Help_Tutorial" xml:space="preserve">
     <value>Tutorial</value>
   </data>
+  <data name="Menu_Help_DiagnosticMode" xml:space="preserve">
+    <value>Diagnostic mode</value>
+  </data>
   <data name="Menu_Help_About" xml:space="preserve">
     <value>About</value>
   </data>
