--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -586,7 +586,7 @@ Click again to remove marks.</value>
     <value>Date</value>
   </data>
   <data name="Msg_ServiceUpdateInProgress" xml:space="preserve">
-    <value>A maintenance update for Anon PDF is in progress until {0}.</value>
+    <value>A maintenance update for {1} is in progress until {0}.</value>
   </data>
   <data name="Msg_ExportGraphics_Done" xml:space="preserve">
     <value>Export of graphics completed.
@@ -595,7 +595,7 @@ Files saved to:
 {0}</value>
   </data>
   <data name="Msg_NewVersionDetectedMaintenance" xml:space="preserve">
-    <value>A newer version of Anon PDF was detected. Maintenance will run until {0}.
+    <value>A newer version of {1} was detected. Maintenance will run until {0}.
 
 Please save your work and close the application.
 
@@ -765,10 +765,10 @@ Project: {0}</value>
     <value>Save the PDF under a different name</value>
   </data>
   <data name="Dialog_Title_OpenPap" xml:space="preserve">
-    <value>Select a AnonPDF project file</value>
+    <value>Select a project file for {0}</value>
   </data>
   <data name="Dialog_Title_SavePap" xml:space="preserve">
-    <value>Enter AnonPDF project file name</value>
+    <value>Enter a project file name for {0}</value>
   </data>
   <data name="About_Message" xml:space="preserve">
     <value>Application: {0}
@@ -786,7 +786,14 @@ Licenses and components:
 - TesseractOCR (.NET) (Apache-2.0)
 
 Source code available under AGPL-3.0 (see LICENSE file).
-Repository: https://github.com/umszczecin/AnonPDF</value>
+Copyright: see NOTICE.md.
+Repository: https://github.com/misart/AnonPDFPro</value>
+  </data>
+  <data name="About_Description" xml:space="preserve">
+    <value>Dedicated application for PDF anonymization</value>
+  </data>
+  <data name="About_Copyright" xml:space="preserve">
+    <value>Copyright © 2025–2026 Urząd Miasta Szczecin; Modifications © 2026 MISART Marta Klimek</value>
   </data>
   <data name="Signatures_Report_Title" xml:space="preserve">
     <value>List of qualified signatures in the original document (before anonymization):</value>
