--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -586,7 +586,7 @@ Ponowne kliknięcie usunie zaznaczenia.</value>
     <value>Data</value>
   </data>
   <data name="Msg_ServiceUpdateInProgress" xml:space="preserve">
-    <value>Aktualnie do {0} jest przeprowadzana aktualizacja aplikacji Anon PDF.</value>
+    <value>Aktualnie do {0} jest przeprowadzana aktualizacja aplikacji {1}.</value>
   </data>
   <data name="Msg_ExportGraphics_Done" xml:space="preserve">
     <value>Eksport obiektów graficznych zakończony.
@@ -595,7 +595,7 @@ Pliki zapisano w katalogu:
 {0}</value>
   </data>
   <data name="Msg_NewVersionDetectedMaintenance" xml:space="preserve">
-    <value>Wykryto nowszą wersję aplikacji Anon PDF. Do {0} będzie przeprowadzana aktualizacja aplikacji.
+    <value>Wykryto nowszą wersję aplikacji {1}. Do {0} będzie przeprowadzana aktualizacja aplikacji.
 
 Proszę zapisać wyniki swojej pracy i wyłączyć program.
 
@@ -765,10 +765,10 @@ Projekt: {0}</value>
     <value>Zapisz plik PDF pod inną nazwą niż bieżąca</value>
   </data>
   <data name="Dialog_Title_OpenPap" xml:space="preserve">
-    <value>Wybierz plik projektu AnonPDF</value>
+    <value>Wybierz plik projektu {0}</value>
   </data>
   <data name="Dialog_Title_SavePap" xml:space="preserve">
-    <value>Podaj nazwę pliku projektu AnonPDF</value>
+    <value>Podaj nazwę pliku projektu {0}</value>
   </data>
   <data name="About_Message" xml:space="preserve">
     <value>Nazwa aplikacji: {0}
@@ -786,7 +786,14 @@ Licencje i komponenty:
 - TesseractOCR (.NET) (Apache-2.0)
 
 Kod źródłowy dostępny zgodnie z AGPL-3.0 (zobacz plik LICENSE).
-Repozytorium: https://github.com/umszczecin/AnonPDF</value>
+Prawa autorskie: zobacz NOTICE.md.
+Repozytorium: https://github.com/misart/AnonPDFPro</value>
+  </data>
+  <data name="About_Description" xml:space="preserve">
+    <value>Aplikacja dedykowana do anonimizacji plików PDF</value>
+  </data>
+  <data name="About_Copyright" xml:space="preserve">
+    <value>Copyright © 2025–2026 Urząd Miasta Szczecin; Modyfikacje © 2026 MISART Marta Klimek</value>
   </data>
   <data name="Signatures_Report_Title" xml:space="preserve">
     <value>Lista podpisów kwalifikowanych w oryginalnym dokumencie (przed anonimizacją):</value>
