--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -123,6 +123,9 @@
   <data name="Menu_Options" xml:space="preserve">
     <value>&amp;Options</value>
   </data>
+  <data name="Menu_Options_FullScreen" xml:space="preserve">
+    <value>Full screen</value>
+  </data>
   <data name="Menu_Help" xml:space="preserve">
     <value>&amp;Help</value>
   </data>
