--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -135,6 +135,9 @@
   <data name="Theme_NordCoolLight" xml:space="preserve">
     <value>Nord Cool Light</value>
   </data>
+  <data name="Theme_BalticBreeze" xml:space="preserve">
+    <value>Baltic Breeze</value>
+  </data>
   <data name="Theme_WarmSand" xml:space="preserve">
     <value>Warm Sand</value>
   </data>
@@ -145,7 +148,7 @@
     <value>Graphite Dark</value>
   </data>
   <data name="Theme_OledDarkTeal" xml:space="preserve">
-    <value>OLED Dark + Teal</value>
+    <value>Dark Teal</value>
   </data>
   <data name="Menu_Help" xml:space="preserve">
     <value>&amp;Help</value>
