feat(tutorial): add tutorial list with localized json and ordering

--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -537,6 +537,18 @@ Click again to remove marks.</value>
     <value>Cannot start tutorial:
 {0}</value>
   </data>
+  <data name="Tutorial_InvalidFormat" xml:space="preserve">
+    <value>Invalid tutorial.json format.</value>
+  </data>
+  <data name="Tutorial_NoItems" xml:space="preserve">
+    <value>Tutorial does not contain any topics.</value>
+  </data>
+  <data name="Tutorial_Column_Title" xml:space="preserve">
+    <value>Topic</value>
+  </data>
+  <data name="Tutorial_Column_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
   <data name="UI_Filter_AllPages" xml:space="preserve">
     <value>All pages</value>
   </data>
