--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -549,6 +549,27 @@ Click again to remove marks.</value>
   <data name="Tutorial_Column_Description" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="License_StartupError" xml:space="preserve">
+    <value>Missing or invalid license files:
+{0}
+
+The application will close.</value>
+  </data>
+  <data name="License_ConfigMissing" xml:space="preserve">
+    <value>Missing config.json: {0}</value>
+  </data>
+  <data name="License_ConfigInvalid" xml:space="preserve">
+    <value>Invalid config.json: {0}</value>
+  </data>
+  <data name="License_FileMissing" xml:space="preserve">
+    <value>Missing license file: {0}</value>
+  </data>
+  <data name="License_PublicKeyMissing" xml:space="preserve">
+    <value>Missing public key file: {0}</value>
+  </data>
+  <data name="License_Invalid" xml:space="preserve">
+    <value>Invalid license: {0}</value>
+  </data>
   <data name="UI_Filter_AllPages" xml:space="preserve">
     <value>All pages</value>
   </data>
