--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -430,7 +430,7 @@
     <value>Wygeneruj raport podpisów na dodatkowej stronie.</value>
   </data>
   <data name="Tooltip_Signatures_Original" xml:space="preserve">
-    <value>Anonimizuje podpisy i pozostawia oryginalne ich wizualizacje.</value>
+    <value>Anonimizuj podpisy i pozostaw ich oryginalne wizualizacje.</value>
   </data>
   <data name="Tooltip_Signatures_Remove" xml:space="preserve">
     <value>Usuń podpisy kwalifikowane przed zapisaniem.</value>
