fix(update): clarify new version message

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -677,10 +677,10 @@ Proszę zapisać wyniki swojej pracy i wyłączyć program.
 Automatyczne wyłączenie nastąpi za 5 minut.</value>
   </data>
   <data name="Msg_NewVersionAvailable" xml:space="preserve">
-    <value>Dostępna jest nowsza wersja {0} (data aktualizacji: {1}).</value>
+    <value>Dostępna jest do pobrania nowsza wersja {0} (data aktualizacji: {1}).</value>
   </data>
   <data name="Msg_NewVersionChangesHeader" xml:space="preserve">
-    <value>Zmiany:</value>
+    <value>Zmiany w tej wersji:</value>
   </data>
   <data name="Msg_NewVersionNoChanges" xml:space="preserve">
     <value>Brak listy zmian.</value>
