--- a/Properties/Resources.en.resx
+++ b/Properties/Resources.en.resx
@@ -677,10 +677,10 @@ Please save your work and close the application.
 The application will close automatically in 5 minutes.</value>
   </data>
   <data name="Msg_NewVersionAvailable" xml:space="preserve">
-    <value>A newer version {0} is available (updated: {1}).</value>
+    <value>A newer version {0} is available for download (updated: {1}).</value>
   </data>
   <data name="Msg_NewVersionChangesHeader" xml:space="preserve">
-    <value>Changes:</value>
+    <value>What's new:</value>
   </data>
   <data name="Msg_NewVersionNoChanges" xml:space="preserve">
     <value>No change list provided.</value>
